--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -8,3 +8,9 @@ michael:
   name: Michael Example
   email: michael@example.com
   password_digest: <%= User.digest('password') %>  # erbが使えるんだね
+
+# 二人目
+archer:
+  name: Sterling Archer
+  email: duchess@example.gov
+  password_digest: <%= User.digest('password') %>
