ユーザー削除のテスト実装

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -8,6 +8,7 @@ michael:
   name: Michael Example
   email: michael@example.com
   password_digest: <%= User.digest('password') %>  # erbが使えるんだね
+  admin: true
 
 # 二人目
 archer:
